rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__file_info_directory_with_size_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
assertion_line: 91
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                        ┌File Information──────────────────────────────────────────────────────┐                        ",
        "                        │  Name     my_folder                                                  │                        ",
        "                        │  Path     /test/my_folder                                            │                        ",
        "                        │  Size     1.00 MB (1048576 bytes)                                    │                        ",
        "                        │  Type     Directory                                                  │                        ",
        "                        │                                                                      │                        ",
        "                        │  Created  N/A                                                        │                        ",
        "                        │  Modified [TIMESTAMP]                                        │                        ",
        "                        │  Accessed N/A                                                        │                        ",
        "                        │                                                                      │                        ",
        "                        │                                                                      │                        ",
        "                        │  Enter/Esc: close                                                    │                        ",
        "                        └──────────────────────────────────────────────────────────────────────┘                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 41, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 16, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 17, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 19, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 20, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 24, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
